# detonator

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  README.md  detonator-explainer.html  pyproject.toml
.github/workflows/: ci.yml
docs/: stdio-and-mcp.md
docs/plans/: 2026-07-02-detonator-v1.md
fixtures/: slack_clean.jsonl  slack_exploit.jsonl
orchestrator/: RED-TEAM.md  SKILL.md
scenarios/: slack-ops-indirect-injection.yaml
src/detonator/: __init__.py  cli.py  inventory.py  target.py
src/detonator/eval/: __init__.py  canary_exfil.py  run.py  tripwire.py  unauthorized_tool.py
src/detonator/model/: __init__.py  context.py  loader.py  scenario.py  verdict.py  wire.py
src/detonator/poison/: __init__.py  description.py  match.py  splice.py  strategy.py
src/detonator/proxy/: __init__.py  log.py  session.py  stdio.py  transport.py
targets/: RUNBOOK.template.md
targets/slack-ops-agent/: RUNBOOK.md
tests/: _fake_upstream.py  fakes.py  test_cli_proxy.py  test_cli_validate.py  test_config.py  test_eval_cli.py  test_inventory.py  test_log.py  test_proxy_stdio.py  test_replay.py  test_session.py  test_transform.py  test_tripwires.py  test_validate.py
