[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detonator"
version = "0.1.0"
description = "Dynamic exploitability testing for AI agents and the MCP servers they use."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "typer>=0.9",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
detonate = "detonator.cli:app"
detonate-mcp-proxy = "detonator.cli:proxy_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
extraPaths = ["src"]
